--- a/_posts/2019-09-02-551.html
+++ b/_posts/2019-09-02-551.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: August 02, 2019
+title: September 02, 2019
 number: 551
-label1: Townsend’s Warbler<br> Coquihalla Mtn, BC -- HNE
+label1: Townsend&#39s Warbler<br> Coquihalla Mtn, BC -- HNE
 label2: <br>  -- AME
 image1: https://lh3.googleusercontent.com/G4brgeS8g0Ny2bI0lOzVJcSgtVPpV0FOP5Tlmm6zqhR4-k6aJcnhDL653n0tGAF3Cj9yjOU2QxszN09Xg6ZDXNXCNSKODKRuyEVHukYet3EA1Uge0IcNR4wvLSXSZQSFOko1JdaOwA=w2400
 mouse1: This species has a subtle yet beautiful nonbreeding plumage 
