--- a/_posts/2019-09-26-575.html
+++ b/_posts/2019-09-26-575.html
@@ -3,9 +3,9 @@ layout: default
 title: September 26, 2019
 number: 575
 label1: Chestnut-backed Chickadee<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Blue Jay with acorn in Balsam Fir <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/NpcAyisjs2ETsotdGSM-KH4etwUC0OFADXBI54DOqY6_iW57cPEmbay9IoRVLoLh6fLst7xw8RcARsiPc4XeIVPiPoergmvJYl8LINGI-y7jrL3r5oqFrvUlPP9uHSLPevuVhOx5rg=w2400
 mouse1: 
-image2: 
+image2: https://lh3.googleusercontent.com/4Jh6H1WbDgQkcCQm_StgzDxYQ_u3LOBIqu2jMcoyWWDy0dpzcewvQw1tEI8rJjlv2zLfKEUvYVNDmsmp8v4LfoI8l5ozpWP3uOuTTxN1XJL9YsG6udi2NSPtTdxbrzI7Tod9fdnDQp7fzNma6E-6TXvYmXgyEDkHC6W6gweQ_P1Ba5umEJhyI_SCEGd1rst7ZAbSgim9-Y5BEM5Qp614n1spUFtfg8XSCby4ry4n7HFYrnV6UXRqcoxE93h97zuDNDhRyPu4Mdr_smfJtnUCNzsMkOzRTI9BIBIJQTrzmgfyRNAtTPzOQTAYX_Xjnmec4UnXh1FfEtPu1PvYeIksKlVWJQCWellBT-qPrin83cRFMdMUGa98JJWtYWOU6luM2toaDXF6Ba43j-VrREtDXSM11iHOZwzMD6MVnLud9Ed5iltbFQSyZEqBBZjxpNAZAlsojUOq9gcDuMxYM0XSZ4VRyFC5IfgZ1wdQ1dSOB9B2_k0jsCRNdamy3mDhii95KOhyermGa7kd4d61NMIgRv_EnURKBhwoRuCL00FDVcs4E6KwtLmyHg2_1L0jY7C95xwHYiUI6DOX0-QkxbqNwx_R_usmR55sUgTHNq6fqBIPCHPhXJAwvWbW6BWhc4pu8zREIicK-B9GnnwjptDeEtKNcK3XDaXflf6ACGfpL4ieNEuCJ0tdNqvogvvF2joZ6qlc0FPsjvLEK0lNttoXWouNvrjxVyScNp63l8cltmGDj-Y7=w695-h926-no
 mouse2: 
 ---
