--- a/_posts/2019-09-27-576.html
+++ b/_posts/2019-09-27-576.html
@@ -3,9 +3,9 @@ layout: default
 title: September 27, 2019
 number: 576
 label1: American Coot<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Sugar Maple and mushroom with slug <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/GLqsrS6WeEL5Scn2rtecNU1fwU8z3iezrqCcu57-YNGtU1UJn8V53iSWsK-cqYgWjmiCmLZ_zZFSLR9fHVPA8zYrM8yP0_aw5GKw95Nd0oUxndh9mtDbPiZFRTsD0l8M6mPn84-BEw=w2400
 mouse1: 
-image2: 
+image2: https://lh3.googleusercontent.com/KPmR6nHHrrpmAXrZ68UC4U-ZKTU_V6pDHsEKzI0SH5i240UOY0gguZi_0g9oLsOWL33dcTctTM2ErIozXmXYW98KXiug855KdvlC2mEdz42AfIE_PYZlwJCiNTlAC1irQ2r6ZcknsA=w2400
 mouse2: 
 ---
