--- a/_posts/2019-09-28-577.html
+++ b/_posts/2019-09-28-577.html
@@ -3,9 +3,9 @@ layout: default
 title: September 28, 2019
 number: 577
 label1: Varied Thrush<br> West Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Dusk at Big Donahue lake <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/C0hhyWODWqA6CCZCrLP9vh0lW1QV8X5llO605bvdI6CWnZ38LMD9rOGxx952g6MhHuNM0t7GRIUiDElf4Qe0CjHyQtzRsQBlkOk0RQ99ZboQt024fpN2C3ujlbyUdYHIasjQsBem-Q=w2400
 mouse1: 
-image2: 
+image2: https://lh3.googleusercontent.com/WE1WhwNIuy8gLrqFz0x86FgJLZxhbkwZ19eYKxjKLp6iAC7VOv_qW9ka_pu1Ge5OToLYSQi4DlxqhQYod967V92ufARF4zPmc7R6PRnbQkvTy1NfHO66iqXAJe99DwHFfOOl_6Uyzw=w2400
 mouse2: 
 ---
