--- a/_posts/2019-09-29-578.html
+++ b/_posts/2019-09-29-578.html
@@ -3,9 +3,9 @@ layout: default
 title: September 29, 2019
 number: 578
 label1: Ring-necked Duck<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Intriguing insect, name unknown. <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/5P-BMG_1NRDpIwKNhdSzK47LUeKWcwNUiX7NRubzYDhVhOTUxBLAolF0JQBXKby_sA7ZP_auyBWaF4zCQyfNjAZJkOsfimRqLSDTUNhzED2g-f6id_6vVbeS8CvzzcpDltUbVl4SCQ=w2400
 mouse1: Beautiful browns 
-image2: 
+image2: https://lh3.googleusercontent.com/4pc5jT3VY0k-xwAvbHup2siB7Gx2bwoFNdx_hC6vS_NcF7Zt0C3xbYwzZOpzNvI-1nR3RxcNL8BG45hOQzsne7LnTg2XE4N-XVj41zo-sO8ReedFeapyXCNXdmMp2cdmHAfgUpACeg=w2400
 mouse2: 
 ---
