--- a/_posts/2019-10-07-586.html
+++ b/_posts/2019-10-07-586.html
@@ -3,9 +3,9 @@ layout: default
 title: October 07, 2019
 number: 586
 label1: Northern Flicker<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Starflower<br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/6D8d6TIX9AuXAw_EDjNs3wFUvPjBRvKdFFTxwkqMGBEKB_BZhdngx44DG3taxl09gQ7oYwuKTvAFFChhnsqxIji-1vAUEzP6A1XknG32Glju0Q3KPUvd7xsMCpEvB8B6Lm-tGruVWQ=w2400
 mouse1: 
-image2: 
+image2: https://lh3.googleusercontent.com/rLuAakChU92kpTAxlq2CL5bWfDJrgbn-1XJxJt-z5pI0CG0tOrK_8gl51GASxXZ9XsjwI0gqH_0HhYHrCV-HKbuvdjo3F_xlhbboITOMyhDeClc28Iead7jYTR65Nff-B9atKD2rfA=w2400
 mouse2: 
 ---
