--- a/_posts/2019-10-08-587.html
+++ b/_posts/2019-10-08-587.html
@@ -3,9 +3,9 @@ layout: default
 title: October 08, 2019
 number: 587
 label1: Oregon Junco<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
-image1: https://lh3.googleusercontent.com/6D8d6TIX9AuXAw_EDjNs3wFUvPjBRvKdFFTxwkqMGBEKB_BZhdngx44DG3taxl09gQ7oYwuKTvAFFChhnsqxIji-1vAUEzP6A1XknG32Glju0Q3KPUvd7xsMCpEvB8B6Lm-tGruVWQ=w2400
+label2: Red Maple<br> Land O&#39Lakes, WI -- AME
+image1: https://lh3.googleusercontent.com/6nsx5AAG-k3nwBRWOkAbV5u1CRfkXW_F2YUvtJr3ktaxwKBxPp46Iil_gw5t5WPfa_0XU_0vnnKUj3xoS4dlrguR2-IkOuN5tmu8O3t4RRJ2AqNnxTO2WC_QUaa6mAUCfzAxzkMxUA=w2400
 mouse1: 
-image2: 
+image2: https://lh3.googleusercontent.com/0ySYdkzT197831kbSteGYECzCk-E7j6KeMgd9cW2_CwdQgaAP-FO1sNZwbGxamEx5aDkriW6snU_Bedw1IqpB9nlf5hzutbn10PuaFzZFXmybbvbxUycxgR6sN6WMnfAltT3Oq0CjA=w2400
 mouse2: 
 ---
