--- a/_posts/2019-10-29-608.html
+++ b/_posts/2019-10-29-608.html
@@ -4,8 +4,8 @@ title: October 29, 2019
 number: 608
 label1: Sweetgum<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://lh3.googleusercontent.com/ifpfTmhGzNIynmSMLO-Jr-Bah3YruZccqclcyagv2cBVOkPkWzttBGIlQCMiRRqQOzz0Wgql-d5tLDR0Kc2Oagoc_d7F_Q0rmVTSRBqwbt_lmIP-Lw8XhN84rwNapHtlwWuaUUKjLA=w2400
-mouse1: When all you have are markers… 
+image1: https://lh3.googleusercontent.com/CmwSqdBkpIx9osECBQWLyJ7IDCnfiMg8wcBOhOiN66gdgOdtFhDF0DtA1gDe_4yM_ZbriZvCp4GA0IPSy9fIxdSR0f2ub7uEHQLnXeBm4E1cnlj0_sWcReF441hTMnLpHBgnUy_pkg=w2400
+mouse1: When all you have are markers
 image2: 
 mouse2: 
 ---
