--- a/_posts/2019-10-10-589.html
+++ b/_posts/2019-10-10-589.html
@@ -3,9 +3,9 @@ layout: default
 title: October 10, 2019
 number: 589
 label1: Northern Shrike and Anna&#39s Hummingbird<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Wintergreen <i>Gaultheria procumbens</i><br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/ssJz1LWN3eq0wiwfvlN-F0UQDm8tUMYKGfThNIFhlcGmLJv3e-eeSYRAI29YSIqJPMvcQJMhtyXh1PGIsaTMZeXSqD31YH6GKmtjsD3UurCkqNntrO9FpORn2U9gtcQY2ZK7qd1MHA=w2400
 mouse1: I have never seen a Shrike mobbed before 
-image2: 
+image2: https://lh3.googleusercontent.com/sfxa8RFAaABOSXo8jbqakMu65uQTNi8Lzam-_AZNaVtsUnLM91ax_iVVcaIbp9j_IrxRH8NgUf4x8Oiq5M6h5DXGswAc1cYC8CImIgLY4S1jKUuE8sHHNR54zMsGXSumWtti4wjLLw=w2400
 mouse2: 
 ---
