--- a/_posts/2019-10-16-595.html
+++ b/_posts/2019-10-16-595.html
@@ -3,9 +3,9 @@ layout: default
 title: October 16, 2019
 number: 595
 label1: Blue Mussel <br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Intermediate Woodfern <i>Dryopteris intermedia</i><br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/-cxQ-pMDJgf8XoHnuqo5YcIarjQCxoe7NSdGXsbEYNuPElYGn00pC8CnyxT3cGwJrwsHe4LxNHcOUeK0ztMf896dIJe6VYRimKTtIBbi6RLXO3gfvojdZAIuF8vs7g-Kjy1WQ6gYNQ=w2400
 mouse1: 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/lTh0IopkD6xwA44HVYW4njiJwvGYGq2FI30hj7r-RGZc-fbjJw8ydehHtj-YBysq7ieymd8xmnlhLvJnOI1AAVLi2e0axrUQ15JRJT6J8E1PRmyq-IG42qSiUd82Cq4QHL7k7NSk_g=w2400
+mouse2: Also called Evergreen Woodfern, this fern stays green long after the Bracken ferns have turned brown. 
 ---
