--- a/_posts/2019-10-17-596.html
+++ b/_posts/2019-10-17-596.html
@@ -3,9 +3,9 @@ layout: default
 title: October 17, 2019
 number: 596
 label1: Red-tailed Hawk<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Strawberry leaf <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/r6bbOJnLMwE1rrGO4S32KhFsS87kN_lD0fuGnRDtiEOjHAFICZUF898AWDla8c_nsgCIv9PN3jsdRWjwpTHpMmLeJVIiE0k6oNjsPCS-YSRZ5JsEVBqU_oo5vcvwciLRZbkcLqPGXQ=w2400
 mouse1: No red tail to see here 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/mcg5kY-2NM1SgoNDYXyWJRtEanZfkIA-yPBeYAWWs6eN2GW1Ds5U75t6YuMN6NkCps5_UTKqJS2F8PDVpTln2MX5KczcLhUoYOuVoxIB2QTaYsUw7XeYAFQvExIC-vnlGrDsH9Kmzg=w2400
+mouse2: I think that this is a native stawberry but not sure 
 ---
