--- a/_posts/2019-10-20-599.html
+++ b/_posts/2019-10-20-599.html
@@ -3,9 +3,9 @@ layout: default
 title: October 20, 2019
 number: 599
 label1: Wild Turkey<br> Lima Twp, MI -- HNE
-label2: <br>  -- AME
+label2: White Pine Cone<br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/dOUQO_oifDswSe4GkyZu0CawjbdGeGFaO93TX7DJ4PiF9zm7Iv8zWQ6G3KTKnNjMcyORo681LDnz-1Txy6meHv3FTxWP3Z_Tpnu_ciZmPzeAmb6I-6xMvnDQqiBNalA8JGlXeHKOUg=w2400
 mouse1: 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/UBpD3e4CcBreHD0ShyXDyfjhUCHSLbwAWWqGS8Wy1pOopkOVsDK23ZpDP3ofAzTnRS837Mb4BZ0JanSxvRZCcJNb-d5nDV_5Tg7jfRPwAZifuNhFQPisINuZuFHZvE8vAIDuaW2Cuw=w2400
+mouse2: I have really enjoyed my brown micron pen this fall. 
 ---
