--- a/_posts/2019-10-21-600.html
+++ b/_posts/2019-10-21-600.html
@@ -3,9 +3,9 @@ layout: default
 title: October 21, 2019
 number: 600
 label1: Whooping Crane<br> Lima Twp, MI -- HNE
-label2: <br>  -- AME
+label2: Ontonagon River at Agate Falls<br> Trout Creek, MI -- AME
 image1: https://lh3.googleusercontent.com/gHeea5KLiSeWapoZ4tm-YxLlnLlesS6g9nkrfClkVmjr69JdYU6ztMttgHL3HV07UmlWHYGSo7cj9cZrb9-XZva75ESXPtPTFXVCW1i4piZLzRVvDspYKAHxqCL1mktJ668JDZbkEA=w2400
 mouse1: What a bird. Soaring whiteness, eery trumpeting. 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/PnCy8kgkhTB0cXoAlO74bdwU8I0afKuvFR9aw2a1ZWJE-Gznl9_TSiuigUc77fW1cQBJqlWfGHqD3KwTda6yBZH2YYbCHpyrf_NR84a68zoDXpoGlfkwoehHnX3AeCPQtXxn9Jcv0g=w2400
+mouse2: I stopped by this waterfall on my way back from Marquette MI. It was rainy and beautiful. 
 ---
