--- a/_posts/2019-10-22-601.html
+++ b/_posts/2019-10-22-601.html
@@ -3,9 +3,9 @@ layout: default
 title: October 22, 2019
 number: 601
 label1: Jefferson&#39s Salamander <br> Lima Twp, MI -- HNE
-label2: <br>  -- AME
+label2: Starflower stalks<br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/FDkuriO3CH4_S_vUViXyDRkZ8HTiowRbc1H4uendmuNhZMVfK8hm_FCkjue6VcZlJp210O5wFQrZznsFh_EXeac7RXqfDidACtOqshHqyE0oOj8yF7MougI8QLVincBsxwkzQ-IArA=w2400
 mouse1: Lashing its tail, like a cat. I have never seen this behavior before
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/swNUMuso2iatNchIOLmaBy97RMvz1rN6UWvw9IhoEc1wRpOAMGemFRXF_nTbSlrhEsF5Ja5Kqlm903NGygTdeJ4vP7J-OKvs35yTzpeLXT92DCikMwVFX52JJb5XFq9KGtkdZfT_aQ=w2400
+mouse2: Their white fruit are quite stunning amidts the browns of fall. 
 ---
