--- a/_posts/2019-10-23-602.html
+++ b/_posts/2019-10-23-602.html
@@ -3,9 +3,9 @@ layout: default
 title: October 23, 2019
 number: 602
 label1: Ruby-crowned Kinglet <br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Paper Birch <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/VGq6KcR2SI0t3wVCHaOP1xJJaAxAA_NII8xcRjaPpIF1_RhdPP8ptYv521UyPrwVtoa6S3WRPCoYV7v1DKOIDDhi8HOmqRj6yblDpYkYOLvioZ7WQCzAW7uKk3B12YLg3rNytGq35A=w2400
 mouse1: 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/M6KMaSkRXIcGKhLCJbo2FjOIYA4pfczmnuCkkdO1VRvhvEiG6JHNbhnd2yisgRn7VBsE1UVo8vNEaG92AmfYDS-WeztFJmZg_LEmWEkkjRK2_SCm9PFj1hlO7GUjBMJ6tPBCHL4SZQ=w2400
+mouse2: Their leaves have just a slightly different shape than yellow birch 
 ---
