--- a/_posts/2019-10-27-606.html
+++ b/_posts/2019-10-27-606.html
@@ -3,9 +3,9 @@ layout: default
 title: October 27, 2019
 number: 606
 label1: Steller&#39s Jay<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Red Oak <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/wGCE-41tQ8onujMEd2IxNoRbsUOVRt2cvlvX4M-Dg5jonzJpeRufGWM8dqVWoCtvyPWYYGo1z6D2y0mSq36ypb9QQo_PLsWKazLnezNloID5Sub9mMWWzt19QxiX5AuTNHPhc6_A4g=w2400
 mouse1: Sitting, reading, on my deck. A Jay comes to investigate, loudly, proclaiming my presence 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/FOSSPbsxY2ISGYkEuqvqtKe6JSE-XBkBowTspLKsbagukrVxhTfp0zQejazJuIDfwHAfiuayDxKoOl-jOs0g-JKl1IT1_yMslj16UUY-Bj2wG0sWCsR4bFEnpm_zbBgMeBaCJpB3Fg=w2400
+mouse2: Marcescence is the retention of dead plant organs that normally are shed.
 ---
