--- a/_posts/2019-10-29-608.html
+++ b/_posts/2019-10-29-608.html
@@ -3,9 +3,9 @@ layout: default
 title: October 29, 2019
 number: 608
 label1: Sweetgum<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Tracks, Grass, and Juncos<br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/CmwSqdBkpIx9osECBQWLyJ7IDCnfiMg8wcBOhOiN66gdgOdtFhDF0DtA1gDe_4yM_ZbriZvCp4GA0IPSy9fIxdSR0f2ub7uEHQLnXeBm4E1cnlj0_sWcReF441hTMnLpHBgnUy_pkg=w2400
 mouse1: When all you have are markers
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/C9K7Yt0U4aKQ9U-GjL8zLDNHDWM22bs0_TBlaryCkJX0KF7ID8UWVlYRhhlm2cHFT7tBPssL3kULNVHeKQ4BvjYw8vtv22fSq9BT7gaqcFMnf6-BV4xLsDEwI1rPoULG-LPwTJcwDg=w2400
+mouse2: Its great to have the Juncos and snow back. 
 ---
