--- a/_posts/2019-10-12-591.html
+++ b/_posts/2019-10-12-591.html
@@ -3,9 +3,9 @@ layout: default
 title: October 12, 2019
 number: 591
 label1: American Robin<br> Vancouver, BC  -- HNE
-label2: Wintergreen <i>Gaultheria procumbens</i><br> Land O&#39Lakes, WI -- AME
+label2: Sugar maple <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/WGl3Bjsr7cz6FSoGKxK0WxqRvF541LrG-BUXE-mqZAX8EZoTrnpdcR_IlLY7I7u-LpmLs_CjzRJIp5XAuKCQvhVtffGkx11otrHSMJOIaB9ywlZQ48juk0DnAfG88I8sKjDZtINBhQ=w2400
 mouse1: Huge flocks of starlings and robins moving through the city 
-image2: https://lh3.googleusercontent.com/sfxa8RFAaABOSXo8jbqakMu65uQTNi8Lzam-_AZNaVtsUnLM91ax_iVVcaIbp9j_IrxRH8NgUf4x8Oiq5M6h5DXGswAc1cYC8CImIgLY4S1jKUuE8sHHNR54zMsGXSumWtti4wjLLw=w2400
-mouse2: 
+image2: https://lh3.googleusercontent.com/fnIyjFHQ4tEwJvtZbYK2eU4P1W73kPfzvvlAXa5KtpsJ0nZ_SGwr88xalbQIAIxnlgh_luahNaRtNePiWNhfruqUiS456PrIPr0Ot93jyzcZcedVVQHzK77qDthYul5m5fIziKmSUA=w2400
+mouse2: First snowfall on a maple leaf as per Harold&#39s and my tradition. 
 ---
