--- a/_posts/2019-10-13-592.html
+++ b/_posts/2019-10-13-592.html
@@ -3,9 +3,9 @@ layout: default
 title: October 13, 2019
 number: 592
 label1: Black Bear<br> Garibaldi PP, BC  -- HNE
-label2: <br>  -- AME
+label2: Paper Birch and Hop Hornbeam seeds <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/a7P0xz_kay6xmUZmFWW06qcua7IAsRgysonGd23YJd_CrPkzHQqNJJTWfIfASmgMcuXJ5DzqFqJdOE5I19YuTG6gtYNCHcGHnOqlKD-8SO9bdrhadD1WDV41rfHjaCYj1vYOAcSwEQ=w2400
 mouse1: We saw five today! Eating the last of the blueberries
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/wI4FS8T-kAdbs8y64THCN0o3ayKGHUWycSu7PuME1ax40kLK_7s2dsBTAbT-BBQki2Wyj5akZMsJIEKiONFcypqmMed9JMciCZP4zELeut0lJ9iJVV_x3EE8l7lfIFbA_le3qJTfWA=w2400
+mouse2: Apparently hop hornbeam seeds are tasty but I have never tried them. 
 ---
