--- a/_posts/2019-11-06-616.html
+++ b/_posts/2019-11-06-616.html
@@ -3,9 +3,9 @@ layout: default
 title: November 06, 2019
 number: 616
 label1: Merlin<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Pine, fir, and reeds. <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/U0z7D4RTx4kI2yE6khVYkfpWIq8dzzFfnzePvDTFmGCuwjGDEh3jm8e4yWQL-Sd96pTDWbuUzOMP-Xd2deIpUKuuvigfBX0vAusXaqpp-SNH3TyaG98HA-_6Z6bEQryh73AuXaUp9w=w2400
 mouse1: The students in my class spotted this Merlin eagerly devouring  
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/Rb6fME9hFM2GDvx_cxUnrRu_j5h-FH96EV8iMLvWYuKWDPhnK4u7z6hqSqnkdkZy3yosoDBkmnDIYBX6Ltv08ByKMbNeeouL4XCE7mL5LLsT7o92OKpy9wJzWpPLs99EB2wWGGoTcA=w2400
+mouse2: Lake edge collage 
 ---
