--- a/_posts/2019-11-08-618.html
+++ b/_posts/2019-11-08-618.html
@@ -3,9 +3,9 @@ layout: default
 title: November 08, 2019
 number: 618
 label1: Mallard &#10005 Gadwall<br> Richmond, BC -- HNE
-label2: <br>  -- AME
+label2: Reed <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/lhmRapHArYZWupCx0Ru0GPsQ45vOL1n1Pu9xyE2GRZip3rjhCKBGceLRtFgcwubE4cFL270geDf1qfGYMQW02r4yyUVNARQksYrFEnUMiZBJqEzcvlz99GbXAWLtn5riWo2Sla0hSA=w2400
 mouse1: Hybrids are so excited to find. Something totally new.
-image2: 
+image2: https://lh3.googleusercontent.com/865lAxty6pbXkoeD4aU0G3hLytmMKH90qB9gkFZ-K9fg0xrbTLEeirATa-1BGBs9IW057Ieb34Zzv3KCvUNz0djxuCsnsjvRKnJpkDucQPO9oUtZGDDzT-SMOf8TfauGMpoyvOy93g=w2400
 mouse2: 
 ---
