--- a/_posts/2019-11-09-619.html
+++ b/_posts/2019-11-09-619.html
@@ -3,9 +3,9 @@ layout: default
 title: November 09, 2019
 number: 619
 label1: Magnolia<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2:  Winter Berry, <i>Ilex verticillata </i><br> Sylvania Wilderness, MI -- AME
 image1: https://lh3.googleusercontent.com/zr4CokNchdHHMwoK_nWKSvjwQT4MDzAgL9zlFVKZDTHuZf8BBkH4cOtLzLbocWy-NiGxOPBWbNNlwod743rSAa0c_Km2_HCOOypwsgEaF6qb6mpUF8yr-fag3dyujarYQIdodMk_aw=w2400
 mouse1: 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/hFDJdWEWRf7NDWDS2_zvZGiEdvFnO8WuSBEMpe5wa3fFy0JYHglx5_jwQPUuupse45n7JImLSdlUkocQhMLYO_JEiEjQuQ-gD9Y7eUuZnrft6Y6aTNecBoiGd5CYSuLGsMTzbpcHlw=w2400
+mouse2: A lovely deciduous holly
 ---
