--- a/_posts/2019-11-12-622.html
+++ b/_posts/2019-11-12-622.html
@@ -3,9 +3,9 @@ layout: default
 title: November 12, 2019
 number: 622
 label1: Magnolia seedhead <br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: White-breasted Nuthatch <br> Land O&#39Lakes, WI -- AME
 image1: https://lh3.googleusercontent.com/G2pq1o-IXJc1exIzcgfPEyoPI8hoc7WNCtod-nZ5YXRtny8NkWR-ab2lqg3do_JArPl9i6oa1zjjRQHNmqSAau6rsH_bB8TdCBKK4fnUKyisK_CpeGhiDUTMKkNYiNuSRegT6FmRWQ=w2400
 mouse1: Amazing, elastic, silky, strings attaching the seeds to the rest of the nut. Not sure what they are for? 
-image2: 
-mouse2: 
+image2: https://lh3.googleusercontent.com/CT653HRH9B4dSQELoLm9_UfsXWjQdwLoAybnDSTd3AKfdQDZ8e7YNmAYknMxmNEyuU1vJOQLZbrD5Qt_LRJ6vKlBl_tt0gAD1b4a4JI7yxqOW50V14Jg1hJ83NW2b4ANVcvJi_Dpyg=w2400
+mouse2: The name nuthatch comes from the behavior that the bird has of wedging nuts/seeds into tree bark and then cracking it open causing the nut to "hatch" out of its shell. 
 ---
