--- a/_posts/2020-01-01-672.html
+++ b/_posts/2020-01-01-672.html
@@ -3,9 +3,9 @@ layout: default
 title: January 01, 2020
 number: 672
 label1: Wild Turkey<br> Lima Twp, MI -- HNE
-label2: <br>  -- AME
+label2: Sycamore<br> All that remains  -- AME
 image1: https://i.imgur.com/O7s28Ku.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/DWf0x58.jpg
 mouse2: 
 ---
