--- a/_posts/2020-02-26-728.html
+++ b/_posts/2020-02-26-728.html
@@ -2,9 +2,9 @@
 layout: default
 title: February 26, 2020
 number: 728
-label1: Great Blue Heron<br> Vancouver, BC  -- HNE
+label1: Brown Creeper<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/ByFpD7Y.jpg
+image1: https://i.imgur.com/YArJZLK.jpg
 mouse1: 
 image2: 
 mouse2: 
