--- a/_posts/2020-02-27-729.html
+++ b/_posts/2020-02-27-729.html
@@ -2,9 +2,9 @@
 layout: default
 title: February 27, 2020
 number: 729
-label1: Pine Siskin <br> Vancouver, BC  -- HNE
+label1: Great Blue Heron<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/uQPyoxB.jpg
+image1: https://i.imgur.com/ByFpD7Y.jpg
 mouse1: 
 image2: 
 mouse2: 
