--- a/_posts/2020-02-28-730.html
+++ b/_posts/2020-02-28-730.html
@@ -2,9 +2,9 @@
 layout: default
 title: February 28, 2020
 number: 730
-label1: Varied Thrush<br> Vancouver, BC  -- HNE
+label1: Pine Siskin <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/yFg8Kcm.jpg
+image1: https://i.imgur.com/uQPyoxB.jpg
 mouse1: 
 image2: 
 mouse2: 
