--- a/_posts/2020-02-29-731.html
+++ b/_posts/2020-02-29-731.html
@@ -2,9 +2,9 @@
 layout: default
 title: February 29, 2020
 number: 731
-label1: Mountain Hemlock<br> Whistler, BC -- HNE
+label1: Varied Thrush<br> Whistler, BC -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/N9PBICA.jpg
+image1: https://i.imgur.com/yFg8Kcm.jpg
 mouse1: 
 image2: 
 mouse2: 
