--- a/_posts/2020-03-01-732.html
+++ b/_posts/2020-03-01-732.html
@@ -2,9 +2,9 @@
 layout: default
 title: March 01, 2020
 number: 732
-label1: Redbud<br> Vancouver, BC  -- HNE
+label1: Mountain Hemlock<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/CdusG9C.jpg
+image1: https://i.imgur.com/N9PBICA.jpg
 mouse1: Where did winter go? 
 image2: 
 mouse2: 
