--- a/_posts/2020-03-02-733.html
+++ b/_posts/2020-03-02-733.html
@@ -2,9 +2,9 @@
 layout: default
 title: March 02, 2020
 number: 733
-label1: Red-winged Blackbird<br> Vancouver, BC  -- HNE
+label1: Redbud<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/9PIfABC.jpg
+image1: https://i.imgur.com/CdusG9C.jpg
 mouse1: The sound of spring 
 image2: 
 mouse2: 
