--- a/_posts/2020-03-03-734.html
+++ b/_posts/2020-03-03-734.html
@@ -2,9 +2,9 @@
 layout: default
 title: March 03, 2020
 number: 734
-label1: Brown Creeper<br> Vancouver, BC  -- HNE
+label1: Red-winged Blackbird<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/YArJZLK.jpg
+image1: https://i.imgur.com/9PIfABC.jpg
 mouse1: 
 image2: 
 mouse2: 
