--- a/_posts/2020-03-29-760.html
+++ b/_posts/2020-03-29-760.html
@@ -3,9 +3,9 @@ layout: default
 title: March 29, 2020
 number: 760
 label1: California Sea Lion<br> Powell River, BC  -- HNE
-label2: <br>  -- AME
+label2: Bog pools<br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/XUhsCBr.jpg
 mouse1: Amazing! More than 100 barking and cuddle puddling! 
-image2: 
+image2: https://i.imgur.com/9ATx6UZ.jpg
 mouse2: 
 ---
