--- a/_posts/2020-04-13-775.html
+++ b/_posts/2020-04-13-775.html
@@ -3,9 +3,9 @@ layout: default
 title: April 13, 2020
 number: 775
 label1: Great Blue Heron<br> BC  -- HNE
-label2: <br> Land O&#39Lakes, WI -- AME
+label2: Red maple over a snowy wetland<br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/LTyBTtG.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/VUkP5Ea.jpeg
 mouse2: 
 ---
