--- a/_posts/2020-05-10-802.html
+++ b/_posts/2020-05-10-802.html
@@ -2,7 +2,7 @@
 layout: default
 title: May 10, 2020
 number: 802
-label1: Black-billed Magpie<br>  -- HNE
+label1: Black-billed Magpie<br> BC  -- HNE
 label2: Common Merganser<br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/hcL3pZx.jpg
 mouse1: 
