--- a/_posts/2020-05-11-803.html
+++ b/_posts/2020-05-11-803.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 11, 2020
 number: 803
-label1: Western Tanager<br>  -- HNE
-label2: <br>  -- AME
+label1: Western Tanager<br> BC  -- HNE
+label2: Sedge Wren<br> Powell Marsh SWA, WI -- AME
 image1: https://i.imgur.com/EyecS0O.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/jLMPrIr.jpg
 mouse2: 
 ---
