--- a/_posts/2020-05-19-811.html
+++ b/_posts/2020-05-19-811.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 19, 2020
 number: 811
-label1: Red-breasted Nuthatch<br>  -- HNE
-label2: <br>  -- AME
-image1: https://i.imgur.com/NX4GvbP.jpg
+label1: California Poppy<br> Vancouver, BC  -- HNE
+label2: Northern Parula, chestnut-sided, nodding bellwort and hepatica <br> Turtle-Flambeau Scenic Waters Area, WI -- AME
+image1: https://i.imgur.com/e4Q2mpU.jpg
 mouse1: 
-image2: 
-mouse2: 
+image2: https://i.imgur.com/VpumJ4o.jpg
+mouse2: A perfect day for both warblers and wildflowers 
 ---
