--- a/_posts/2020-05-20-812.html
+++ b/_posts/2020-05-20-812.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 20, 2020
 number: 812
-label1: Wilson&#39s Warbler<br>  -- HNE
-label2: <br>  -- AME
-image1: https://i.imgur.com/2vKygr8.jpg
+label1: Red-breasted Nuthatch<br> Vancouver, BC  -- HNE
+label2: Campsite view <br> The Boundary Waters Canoe Area Wilderness, MN -- AME
+image1: https://i.imgur.com/NX4GvbP.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/HS52E4t.jpg
 mouse2: 
 ---
