--- a/_posts/2020-05-22-814.html
+++ b/_posts/2020-05-22-814.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 22, 2020
 number: 814
-label1: <br>  -- HNE
-label2: <br>  -- AME
-image1: https://i.imgur.com/x8oOcyi.jpg
+label1: Pacific Dogwood <i> Cornus nutallii </i><br> Vancouver, BC  -- HNE
+label2: Jack pine <br> The Boundary Waters Canoe Area Wilderness, MN -- AME
+image1: https://i.imgur.com/qf7hhuT.jpg
 mouse1: 
-image2: 
-mouse2: 
+image2: https://i.imgur.com/SBkviiw.jpg
+mouse2: I love their opposite cones
 ---
