--- a/_posts/2020-05-23-815.html
+++ b/_posts/2020-05-23-815.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 23, 2020
 number: 815
-label1: Sooty Grouse<br>  -- HNE
-label2: <br>  -- AME
+label1: Sooty Grouse<br> Chilliwack, BC -- HNE
+label2: <i>Amelanchier sp. </i><br> The Boundary Waters Canoe Area Wilderness, MN -- AME
 image1: https://i.imgur.com/8eMpV12.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/86zTHuQ.jpg
 mouse2: 
 ---
