--- a/_posts/2020-05-24-816.html
+++ b/_posts/2020-05-24-816.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 24, 2020
 number: 816
-label1: Devi&#39s Matchstick <i> Pilophorus acicularis </i> <br>  -- HNE
-label2: <br>  -- AME
+label1: Devi&#39s Matchstick <i> Pilophorus acicularis </i> <br> Chilliwack, BC -- HNE
+label2: Magnolia Warbler <br> The Boundary Waters Canoe Area Wilderness, MN -- AME
 image1: https://i.imgur.com/rmpi6nX.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/PbwHzJY.jpg
 mouse2: 
 ---
