--- a/_posts/2020-05-26-818.html
+++ b/_posts/2020-05-26-818.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 26, 2020
 number: 818
-label1: Alder<br> Not even summer, and the leaves are already being eaten. Note the way that the leaf has turned yellow where the veins have been cut  -- HNE
-label2: <br>  -- AME
+label1: Alder<br> Vancouver, BC  -- HNE
+label2: American Beaver<br> The Boundary Waters Canoe Area Wilderness, MN -- AME
 image1: https://i.imgur.com/ZRdHmHP.jpg
-mouse1: 
-image2: 
-mouse2: 
+mouse1: Not even summer, and the leaves are already being eaten. Note the way that the leaf has turned yellow where the veins have been cut 
+image2: https://i.imgur.com/3SsNWha.jpg
+mouse2: First one I have ever seen!
 ---
