--- a/_posts/2020-05-27-819.html
+++ b/_posts/2020-05-27-819.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 27, 2020
 number: 819
-label1: Black Medic <br>  -- HNE
-label2: <br>  -- AME
+label1: Black Medic <br> Vancouver, BC  -- HNE
+label2: Leather Leaf<br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/Uyb7JsC.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/Dv3yXje.jpg
 mouse2: 
 ---
