--- a/_posts/2020-05-12-804.html
+++ b/_posts/2020-05-12-804.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 12, 2020
 number: 804
-label1: White-crowned Sparrow<br>  -- HNE
-label2: <br>  -- AME
+label1: White-crowned Sparrow<br> BC  -- HNE
+label2: Nashville Warbler <br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/jbhs1DU.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/yc1fSEp.jpg
 mouse2: 
 ---
