--- a/_posts/2020-05-13-805.html
+++ b/_posts/2020-05-13-805.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 13, 2020
 number: 805
-label1: Mountain Lakes <br> It could not be more beautiful  -- HNE
-label2: <br>  -- AME
+label1: Mountain Lakes <br> BC  -- HNE
+label2: Trailing arbutus <br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/46yWNAO.jpg
-mouse1: 
-image2: 
+mouse1: It could not be more beautiful 
+image2: https://i.imgur.com/EoIxUXJ.jpg
 mouse2: 
 ---
