--- a/_posts/2020-05-14-806.html
+++ b/_posts/2020-05-14-806.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 14, 2020
 number: 806
-label1: Coral Lichen<br>  -- HNE
-label2: <br>  -- AME
+label1: Coral Lichen<br> BC  -- HNE
+label2: Sunset<br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/XOBbOuV.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/vOUORyC.jpg
 mouse2: 
 ---
