--- a/_posts/2020-05-15-807.html
+++ b/_posts/2020-05-15-807.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 15, 2020
 number: 807
-label1: Rufus Hummingbird<br>  -- HNE
-label2: <br>  -- AME
+label1: Rufus Hummingbird<br> BC  -- HNE
+label2: Brown-headed Cowbird<br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/oBQVZBJ.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/aF95Zwp.jpg
 mouse2: 
 ---
