--- a/_posts/2020-05-16-808.html
+++ b/_posts/2020-05-16-808.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 16, 2020
 number: 808
-label1: Calliope Hummingbird<br>  -- HNE
-label2: <br>  -- AME
+label1: Calliope Hummingbird<br> BC  -- HNE
+label2: Large-flowered Trillium<br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/XFEn56L.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/x3f2vgo.jpg
 mouse2: 
 ---
