--- a/_posts/2020-05-17-809.html
+++ b/_posts/2020-05-17-809.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 17, 2020
 number: 809
-label1: Cassin&#39s Finch<br>  -- HNE
-label2: <br>  -- AME
+label1: Cassin&#39s Finch<br> BC  -- HNE
+label2: Red-berried Elder<br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/bU110tm.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/frAz0wT.jpg
 mouse2: 
 ---
