--- a/_posts/2020-05-18-810.html
+++ b/_posts/2020-05-18-810.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 18, 2020
 number: 810
-label1: Cinnamon Teal<br>  -- HNE
-label2: <br>  -- AME
+label1: Cinnamon Teal<br> BC  -- HNE
+label2: European Starling <br> Land O&#39Lakes, WI -- AME
 image1: https://i.imgur.com/Xzhd2g2.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/GDyZNgr.jpg
 mouse2: 
 ---
