--- a/_posts/2020-05-25-817.html
+++ b/_posts/2020-05-25-817.html
@@ -2,10 +2,10 @@
 layout: default
 title: May 25, 2020
 number: 817
-label1: Vaux&#39s Swift <br>  -- HNE
-label2: <br>  -- AME
+label1: Vaux&#39s Swift <br> Vancouver, BC  -- HNE
+label2: Pine River: Little rock falls <br> The Boundary Waters Canoe Area Wilderness, MN -- AME
 image1: https://i.imgur.com/x8oOcyi.jpg
 mouse1: 
-image2: 
+image2: https://i.imgur.com/ZLFvTGx.jpg
 mouse2: 
 ---
