--- a/_posts/2020-07-16-869.html
+++ b/_posts/2020-07-16-869.html
@@ -3,9 +3,9 @@ layout: default
 title: July 16, 2020
 number: 869
 label1: Bald Eagle<br> Vancouver, BC  -- HNE
-label2: <br>  -- AME
+label2: Sunset<br> Chelsea, MI  -- AME
 image1: https://i.imgur.com/hfLvcMC.jpg
 mouse1: Juvenile, peering at the mobbing robins 
-image2: 
+image2: https://i.imgur.com/HgfT1sL.jpg
 mouse2: 
 ---
