--- a/_posts/2020-07-18-871.html
+++ b/_posts/2020-07-18-871.html
@@ -3,9 +3,9 @@ layout: default
 title: July 18, 2020
 number: 871
 label1: Goatsbeard <i> Aruncus dioicus</i> <br> Crown Mountain, BC  -- HNE
-label2: <br>  -- AME
+label2: Neowise Comet <br> Chelsea, MI  -- AME
 image1: https://i.imgur.com/65VdFSw.jpg
 mouse1: I have not noticed this flower before, but it abounded in the boulder field 
-image2: 
+image2: https://i.imgur.com/pPjwiYT.jpeg
 mouse2: 
 ---
