--- a/_posts/2020-08-10-894.html
+++ b/_posts/2020-08-10-894.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  10, 2020
+title: August 10, 2020
 number: 894
 label1: European Starling<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
