--- a/_posts/2020-08-12-896.html
+++ b/_posts/2020-08-12-896.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  12, 2020
+title: August 12, 2020
 number: 896
 label1: Balsam Poplar<br> Burnaby, BC  -- HNE
 label2: <br>  -- AME
