--- a/_posts/2020-08-16-900.html
+++ b/_posts/2020-08-16-900.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  16, 2020
+title: August 16, 2020
 number: 900
 label1: Lake Lovely Water<br> Tantalus Provincial Park -- HNE
 label2: <br>  -- AME
