--- a/_posts/2020-08-17-901.html
+++ b/_posts/2020-08-17-901.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  17, 2020
+title: August 17, 2020
 number: 901
 label1: Canada Yew, ripening berries<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
