--- a/_posts/2020-08-18-902.html
+++ b/_posts/2020-08-18-902.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  18, 2020
+title: August 18, 2020
 number: 902
 label1: Deadly Nightshade <i> Atropa belladonna <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
