--- a/_posts/2020-08-08-892.html
+++ b/_posts/2020-08-08-892.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  08, 2020
+title: August 08, 2020
 number: 892
 label1: Sooty Grouse <br> Coliseum Mountain, BC -- HNE
 label2: <br>  -- AME
