--- a/_posts/2020-08-09-893.html
+++ b/_posts/2020-08-09-893.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  09, 2020
+title: August 09, 2020
 number: 893
 label1: North Shore Mtns<br> BC  -- HNE
 label2: <br>  -- AME
