--- a/_posts/2020-08-11-895.html
+++ b/_posts/2020-08-11-895.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  11, 2020
+title: August 11, 2020
 number: 895
 label1: Balsam Poplar<br> Burnaby, BC  -- HNE
 label2: <br>  -- AME
