--- a/_posts/2020-08-13-897.html
+++ b/_posts/2020-08-13-897.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  13, 2020
+title: August 13, 2020
 number: 897
 label1: Tulip Tree seed<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
