--- a/_posts/2020-08-14-898.html
+++ b/_posts/2020-08-14-898.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  14, 2020
+title: August 14, 2020
 number: 898
 label1: Morning Glory<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
