--- a/_posts/2020-08-15-899.html
+++ b/_posts/2020-08-15-899.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  15, 2020
+title: August 15, 2020
 number: 899
 label1: Gray-crowned Rosy-Finch<br> Tantalus Provincial Park -- HNE
 label2: <br>  -- AME
