--- a/_posts/2020-08-19-903.html
+++ b/_posts/2020-08-19-903.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  19, 2020
+title: August 19, 2020
 number: 903
 label1: Deadly Nightshade <i> Atropa belladonna <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
