--- a/_posts/2020-08-20-904.html
+++ b/_posts/2020-08-20-904.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  20, 2020
+title: August 20, 2020
 number: 904
 label1: Japanese Maple<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
