fixing broken 2019 links

--- a/_posts/2019-04-21-417.html
+++ b/_posts/2019-04-21-417.html
@@ -4,7 +4,7 @@ title: April 21, 2019
 number: 417
 label1: Oregon Coast  <br> Sea Lion Point, OR -- HNE
 label2:  
-image1:  https://lh3.googleusercontent.com/TP2n3Hea-MDd18DJ_NMigdMa0mwC8q7eJQ_taaOc3taadj6f_86csPFsU8NOdmCiL-mlEE_mhj4aNlWEQYL5Us0yMEPd43D9RsO00ysCVPNhXOre2jYIwwuOyX-FIv2XCaR_o44S_pz4ZJ6nRfJ09waGaa3r1aK14JgTxK0Hxk3YP13hVjc382YbbsTZBC_yEFOqo3UJTplspBcWPuVv_VOZPG-bkWytOP7jEawKlyIlyaCz7vuN9_PtSgTmd6N6QzogM1BqpiIDIM4pX_EsLCfj8nR4-Y9JqUVEiqMD02kyTVS_NkSc0ze5gtdiKsX2PDsFF07ELGURbPh3FDihWMRUSPU0w0gFuprIOpyT2IDBPlpkHguG3sXtyauXHeGjE8xe5PGOayo9sfnpuh--R1kL9-6upcDNjAugsK27ED7GBaQfgBldDeZ2LQ8O1eyQcc6qrj5aDohZKEDti82irLHHqOsgrSxAGHXgJJu3nqq4Fy_UtyMaTjN4Ic2CL5tlLQ0ZFDk8lk_ekDX7BtmX1QhM0sCBV9b8Ev3CQH-MhbPejhaOKZ5TLzy6vWtgUNSr0imcUFDLJxYnYAXCYftvBcf572ooh5pWH-2-Vp2xhCRqVNqHcca3A1USNh5X6Z8g5TacLMeKeZvwdbDCT2cUA2gS-Rq_8PA=w695-h926-no
+image1:  https://i.imgur.com/ToWibXs.jpeg
 mouse1:   This coastline is amazing. Sand dunes, rocky vulcanic cliffs, sea lions, and so many birds. 
 image2: 
 mouse2: 
