--- a/_posts/2019-05-24-450.html
+++ b/_posts/2019-05-24-450.html
@@ -4,7 +4,7 @@ title: May 24, 2019
 number: 450
 label1: Lark Sparrow <br>Vancouver, BC  -- HNE
 label2:  
-image1: https://lh3.googleusercontent.com/fnQq45nOSqsupf3YearBhv-Gj6zgWVmRK0cP3VMnLLAciLuQ0d4Br1w7C5RdSQGyLWxi-rGOXNqtqCuU7-fJpfe3U0dzQqRIDJY5J4Zf7WalzmWS6DUvidmInCgk1P3aIT6WXGOvN2R7YokmZM2YWGY9TfhXQEvqTlH1Yj9YFltzszTKYC0sb1grtRZ-gykDtaColbNVJsAwd3sXuSSx9IKJUk12aU-6kqVpTiYqQr0eOboxc_fXG96iZZ3zWykljE39pIR_4X44CchmiQ6G9PqxGXOxY8LgODwtl5LbNisLLFT3nHhnE7zCxWcz1fTqAsnYQikRxtIIlq9syB9Z_AiEIaR4-Na8u15aEfN0LfboJup-uv1PZuotonAQBhgRqMCFsxKUzLuRfkgb-DUvrbcflLgTbzLhxsH9mkjPlokKCNPHwwrLJBBY2PE5hfMW21vTpJBq02c32R-pxwAicLq30TLBeSgOEl5qMvQ0W0pocV9Z182gEo5LMPtQNtsui4j_Vjh_4DowMpdIAIy8_vlt1-Nme22quKYSdymy9GK6NEy220x1Xr0z4INkxYYp6MWQf9mcmw00fVhA6U9tCSUALrG7DVocIM0EXK2uShEoosb0_aq5mCGxdM8t-agfOj7NpUrORQe2oSUT263WnT791rwmucc=w822-h903-no
+image1: https://i.imgur.com/gsBRfPc.jpeg
 mouse1:   A rarity, inspecting the fields 
 image2: 
 mouse2: 
