--- a/_posts/2019-05-28-454.html
+++ b/_posts/2019-05-28-454.html
@@ -4,7 +4,7 @@ title: May 28, 2019
 number: 454
 label1: Rock Pigeon <br>Vancouver, BC  -- HNE
 label2:  
-image1:  https://lh3.googleusercontent.com/olySvrXSaRv5Tb0sUDvc-F7TY6nqvEkCH7XG_VrRdlqQHxIO3JzyXDDuKvE13Qrp0H7SfL6F0fV8-fPYX6sxHDcInuuYpp4P95U84tdINE6uiMls7hb7gWaJ2Z0yvcV0ijxnYQ3eyjIknkwjGpBDUrFHD1XsWJZ2Mt4CqADeepp6vGvktrw4NA_PBWp6IPELjXiqmQNy1wED6XS-g2zN59j417nCrK273s5oo_i5AZ1x5dV4G6kZuASrgG1kK2qr-hfc-es6EQhy_RL9kjfkTHsD3rOzWI9i9epVHaN95GwI8LRzGd6qfgFg4cnkPWCJZJeztMq6L6y0pRbhcUQ5XbNqzPQxqBaQ2U6dRdMBUVL5TQ9Rx7A7jwcjRVUc6PgVOlMBo9EQy1kEPp_slxwjflnhDntpyo0H5RPuXG9zNARL6SKgBv5Suk7HqwDhB9nHTZQvie2rT9ABjKlvID3U1goCaMYO1nwknvUX6EXAd_CFwi8_zEO3kBI9GswValvum8GMPGprh_Cg6WWS7VzuF78ujiZaV1VMfnoOpRbItsklX1kuhagxgaH15bNc2fLNQ3SW6SmOb9a6v2mUdNQqrVPVJzR7RyWdRm1GYb6j58Js5tXJdTyj-mmMmZd99BUP-qg10evMFqzH9HZvKSPjd0LajVZv99Q=w822-h956-no
+image1:  https://i.imgur.com/hgvlNhi.jpeg
 mouse1:  No other bird glides with such a steep 'V.'  It's distinct, and commonplace. But the steepeness of the wings still makes me take a second glance 
 image2:
 mouse2: 
