--- a/_posts/2021-01-25-1062.html
+++ b/_posts/2021-01-25-1062.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  25, 2021
+title: January 25, 2021
 number: 1062
 label1: Anna&#39s Hummingbird<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
