--- a/_posts/2021-01-26-1063.html
+++ b/_posts/2021-01-26-1063.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  26, 2021
+title: January 26, 2021
 number: 1063
 label1: White-winged Scoter<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
