--- a/_posts/2021-01-28-1065.html
+++ b/_posts/2021-01-28-1065.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  28, 2021
+title: January 28, 2021
 number: 1065
 label1: House Sparrow<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
