--- a/_posts/2021-01-29-1066.html
+++ b/_posts/2021-01-29-1066.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  29, 2021
+title: January 29, 2021
 number: 1066
 label1: Horned Grebe<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
