--- a/_posts/2021-02-02-1070.html
+++ b/_posts/2021-02-02-1070.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  02, 2021
+title: February 02, 2021
 number: 1070
 label1: Apple<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
