--- a/_posts/2021-02-06-1074.html
+++ b/_posts/2021-02-06-1074.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  06, 2021
+title: February 06, 2021
 number: 1074
 label1: Northern Shoveler <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
