--- a/_posts/2021-02-07-1075.html
+++ b/_posts/2021-02-07-1075.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  07, 2021
+title: February 07, 2021
 number: 1075
 label1: Crocus<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
