--- a/_posts/2021-02-08-1076.html
+++ b/_posts/2021-02-08-1076.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  08, 2021
+title: February 08, 2021
 number: 1076
 label1: American Crow <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
