--- a/_posts/2021-02-09-1077.html
+++ b/_posts/2021-02-09-1077.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  09, 2021
+title: February 09, 2021
 number: 1077
 label1: Hazelnut<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
