--- a/_posts/2021-02-16-1084.html
+++ b/_posts/2021-02-16-1084.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  16, 2021
+title: February 16, 2021
 number: 1084
 label1: European Starling<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
