--- a/_posts/2021-02-20-1088.html
+++ b/_posts/2021-02-20-1088.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  20, 2021
+title: February 20, 2021
 number: 1088
 label1: Western Meadowlark<br> Richmond, BC -- HNE
 label2: <br>  -- AME
