--- a/_posts/2021-01-27-1064.html
+++ b/_posts/2021-01-27-1064.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  27, 2021
+title: January 27, 2021
 number: 1064
 label1: Song Sparrow<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
