--- a/_posts/2021-01-30-1067.html
+++ b/_posts/2021-01-30-1067.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  30, 2021
+title: January 30, 2021
 number: 1067
 label1: Pacific Wren<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
