--- a/_posts/2021-01-31-1068.html
+++ b/_posts/2021-01-31-1068.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  31, 2021
+title: January 31, 2021
 number: 1068
 label1: Cherry<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
