--- a/_posts/2021-02-01-1069.html
+++ b/_posts/2021-02-01-1069.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  01, 2021
+title: February 01, 2021
 number: 1069
 label1: Hairy Woodpecker<br> Whistler, BC -- HNE
 label2: <br>  -- AME
