--- a/_posts/2021-02-03-1071.html
+++ b/_posts/2021-02-03-1071.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  03, 2021
+title: February 03, 2021
 number: 1071
 label1: European Starling<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
