--- a/_posts/2021-02-04-1072.html
+++ b/_posts/2021-02-04-1072.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  04, 2021
+title: February 04, 2021
 number: 1072
 label1: Glaucous-winged Gull<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
