--- a/_posts/2021-02-05-1073.html
+++ b/_posts/2021-02-05-1073.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  05, 2021
+title: February 05, 2021
 number: 1073
 label1: Bushtit<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
