--- a/_posts/2021-02-10-1078.html
+++ b/_posts/2021-02-10-1078.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  10, 2021
+title: February 10, 2021
 number: 1078
 label1: <i> Viburnum </i><br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
