--- a/_posts/2021-02-11-1079.html
+++ b/_posts/2021-02-11-1079.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  11, 2021
+title: February 11, 2021
 number: 1079
 label1: Beech <br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
