--- a/_posts/2021-02-12-1080.html
+++ b/_posts/2021-02-12-1080.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  12, 2021
+title: February 12, 2021
 number: 1080
 label1: House Finch<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
