--- a/_posts/2021-02-13-1081.html
+++ b/_posts/2021-02-13-1081.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  13, 2021
+title: February 13, 2021
 number: 1081
 label1: Fresh snow on Himalayan Blackberry<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
