--- a/_posts/2021-02-14-1082.html
+++ b/_posts/2021-02-14-1082.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  14, 2021
+title: February 14, 2021
 number: 1082
 label1: Apple budburst<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
