--- a/_posts/2021-02-15-1083.html
+++ b/_posts/2021-02-15-1083.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  15, 2021
+title: February 15, 2021
 number: 1083
 label1: Rose<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
