--- a/_posts/2021-02-17-1085.html
+++ b/_posts/2021-02-17-1085.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  17, 2021
+title: February 17, 2021
 number: 1085
 label1: Canada Goose<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
