--- a/_posts/2021-02-18-1086.html
+++ b/_posts/2021-02-18-1086.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  18, 2021
+title: February 18, 2021
 number: 1086
 label1: Cherry<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
