--- a/_posts/2021-02-19-1087.html
+++ b/_posts/2021-02-19-1087.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  19, 2021
+title: February 19, 2021
 number: 1087
 label1: Cherry<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
