--- a/_posts/2021-02-21-1089.html
+++ b/_posts/2021-02-21-1089.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  21, 2021
+title: February 21, 2021
 number: 1089
 label1: Apple blossoms<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
