--- a/_posts/2021-06-21-1209.html
+++ b/_posts/2021-06-21-1209.html
@@ -4,7 +4,7 @@ title: June 21, 2021
 number: 1209
 label1: Townsend&#39s Warbler<br> Mount Seymour, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/pDzXPx6.jpeg
+image1: https://i.imgur.com/e938rOp.jpeg
 mouse1: 
 image2: 
 mouse2: 
