--- a/_posts/2021-07-02-1220.html
+++ b/_posts/2021-07-02-1220.html
@@ -4,7 +4,7 @@ title: July 02, 2021
 number: 1220
 label1: Long Lake, Tolkien Range <br> Squamish-Lillooet, BC -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/yyMhLVT.jpeg
+image1: https://i.imgur.com/9SvrRsn.jpeg
 mouse1: 
 image2: 
 mouse2: 
