--- a/_posts/2021-07-04-1222.html
+++ b/_posts/2021-07-04-1222.html
@@ -4,7 +4,7 @@ title: July 04, 2021
 number: 1222
 label1: American Crow and Mount Fromme<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/lhMXiMM.jpeg
+image1: https://i.imgur.com/D5MKf2h.jpeg
 mouse1: The view from my deck 
 image2: 
 mouse2: 
