--- a/_posts/2021-06-01-1189.html
+++ b/_posts/2021-06-01-1189.html
@@ -4,7 +4,7 @@ title: June 01, 2021
 number: 1189
 label1: Anna&#39s Hummingbird<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/IBVIE5S.jpeg
+image1: https://i.imgur.com/Z4D2vfB.jpeg
 mouse1: Submitted my dissertation today.
 image2: 
 mouse2: 
