--- a/_posts/2021-06-27-1215.html
+++ b/_posts/2021-06-27-1215.html
@@ -4,7 +4,7 @@ title: June 27, 2021
 number: 1215
 label1: Mount Garibaldi<br> Squamish-Lillooet, BC -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/S0Haouh.jpeg
+image1: https://i.imgur.com/OUivTRe.jpeg
 mouse1: 
 image2: 
 mouse2: 
