--- a/_posts/2021-06-29-1217.html
+++ b/_posts/2021-06-29-1217.html
@@ -4,7 +4,7 @@ title: June 29, 2021
 number: 1217
 label1: Red-shafted Flicker<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/yyMhLVT.jpeg
+image1: https://i.imgur.com/7Kbx0yY.jpeg
 mouse1: 
 image2: 
 mouse2: 
