--- a/_posts/2021-06-30-1218.html
+++ b/_posts/2021-06-30-1218.html
@@ -4,7 +4,7 @@ title: June 30, 2021
 number: 1218
 label1: Horsechestnut<br> Vancouver, BC  -- HNE
 label2: <br>  -- AME
-image1: https://i.imgur.com/yyMhLVT.jpeg
+image1: https://i.imgur.com/1DKVVaQ.jpeg
 mouse1: 
 image2: 
 mouse2: 
